# parallel-fetch

./: Cargo.toml  README.md
src/: errors.rs  fetch.rs  lib.rs  main.rs  utils.rs
tests/: fetch.rs
