[package]
name = "parallel-fetch"
version = "0.1.0"
authors = ["Max Bittman <bittmanmax@gmail.com>"]
edition = "2018"
description = "Parallel Fetch"
readme = "README.md"

[[bin]]
name = "parallel-fetch"
src = "src/main.rs"

[dependencies]
tokio = "0.2.0-alpha.6"
reqwest = "0.10.0-alpha.1"
clap = "2.33.0"
hex = "0.4.0"
md-5 = "0.8.0"
futures = "0.3.1"
futures-util = "0.3.1"
sloggers = "0.3.4"
slog = "2.5.2"

[dev-dependencies]
tempfile = "3.0.7"
mockito = "0.21.0"
